# pre_commit_check

./: .gitignore  README.md  check.sh  precommit-check.sh  pyproject.toml  requirements.txt  setup.py  test.sh  tox.ini
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  codeql.yml  python-package-conda.yml  scorecards.yml
pre_commit_check/: bibtex.py  cmake.py  fls_file.py  git.py  git_status.py  languages.py  latex.py  lint.py  local_git.py  missing_labels.py  pre_commit_check.py  precommit-check.py  test_bibtex.py  test_decorators.py  test_fls_file.py  test_git.py  test_git_status.py  test_latex.py  test_utilities.py  utilities.py
