[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pre_commit_check"
version = "0.0.1"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    bibtexparser="1.4.0",
    GitPython="3.1.30",
    python_version="3.10"
]

[project.scripts]
precommitcheck = "pre_commit_check.pre_commit_check:main"
